--- a/StarBright-master/.cproject
+++ b/StarBright-master/.cproject
@@ -65,11 +65,7 @@
                                     								
                                 </option>
                                 								
-                                <option id="gnu.cpp.compiler.option.preprocessor.def.683209825" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
-                                    									
-                                    <listOptionValue builtIn="false" value="__GXX_EXPERIMENTAL_CXX0X__"/>
-                                    								
-                                </option>
+                                <option id="gnu.cpp.compiler.option.preprocessor.def.683209825" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1227529736" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
                                 							
@@ -79,7 +75,7 @@
                             							
                             <tool id="cdt.managedbuild.tool.gnu.cross.cpp.linker.266159947" name="Cross G++ Linker" superClass="cdt.managedbuild.tool.gnu.cross.cpp.linker">
                                 								
-                                <option id="gnu.cpp.link.option.libs.309966143" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false" valueType="libs"/>
+                                <option id="gnu.cpp.link.option.libs.309966143" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false"/>
                                 								
                                 <option id="gnu.cpp.link.option.paths.359956157" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" useByScannerDiscovery="false" valueType="libPaths">
                                     									
